--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Storyline and fantasy</p>
         
 <hr>
-<a href="../assets/images/HouseParty.png"><h2>House Party Invitation Project</h2></a>
+<a href="./assets/images/HouseParty.png"><h2>House Party Invitation Project</h2></a>
 <h1>Hey! it's my house party!</h1>
 <h2>The whole class is invited, On the 3rd of November :</h2>
 <img src="https://res.cloudinary.com/hz3gmuqw6/image/upload/c_fill,f_auto,q_60,w_750/v1/goldenapron/62b374a0d45ca" alt="House Party"/>
@@ -25,5 +25,5 @@
 </ul>
 <a href="https://maps.app.goo.gl/7oCPQhBxfxhpWgV58"><h3>House location</h3></a>
 <hr>
-<a href="../public/contact.html">Contact Me</a> 
-<a href="../public/about.html">About Me</a>
+<a href="./public/contact.html">Contact Me</a> 
+<a href="./public/about.html">About Me</a>
